DevAccount/src/objects/amount__c.object
<CustomObject>
    <fields>
        <fullName>Approval__c</fullName>
        <label>Approval status</label>
        <picklist>
            <picklistValues>
                <fullName>send for approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sid__c</fullName>
        <label>sid</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>amount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>amounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>